First commit to github

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
     <div class="header">
       <h1>Welcome to Deliverance Church International - Embakasi.... The Garden of Hope.</h1>
     </div>
+    <div class="image">
+      <img src="" alt="">
+    </div>
+    <div class="menu">
+      <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Media</li>
+        <li>Ministries</li>
+        <li>Contact</li>
+        <li>Gallery</li>
+        <li>KINGS SCHOOL</li>
+      </ul>
+    </div>
   </body>
 </html>
